# MIPT_TP_Homework_Sem

./: .gitignore
CMake_Project/: CMakeLists.txt
CMake_Project/A/: script.py
CMake_Project/B/: main.cpp
GDB_capacity/: README.md
Terrible_Singleton/: OuroborosSingleton.cpp
